Fixed mobile view to have access to Dark Mode switch

--- a/src/components/Layout/Nav.scss
+++ b/src/components/Layout/Nav.scss
@@ -72,6 +72,7 @@ nav {
 		*:focus {
 			outline: none;
 		}
+
 		ul {
 			display: flex;
 			align-items: center;
@@ -132,10 +133,10 @@ nav {
 						display: none;
 					}
 					.arrow-up {
-						width: 0; 
-						height: 0; 
+						width: 0;
+						height: 0;
 						border-left: 15px solid $chillFi-purple;
-						border-right: 15px solid $chillFi-purple;	
+						border-right: 15px solid $chillFi-purple;
 						border-bottom: 15px solid $chillFi-purple;
 						border-top: 15px solid $chillFi-purple;
 						position: absolute;
@@ -194,8 +195,15 @@ nav {
 			svg {
 				color: $chillFi-purple;
 			}
+
+
 		}
 	}
+}
+
+.dropdown-darkMode{
+	font-size: 2.6rem;
+	color: $snow-white;
 }
 
 .dark-mode {
@@ -244,7 +252,7 @@ nav {
 			background-color: $maastricht-blue;
 			.arrow-up {
 				border-left: 15px solid $maastricht-blue;
-				border-right: 15px solid $maastricht-blue;	
+				border-right: 15px solid $maastricht-blue;
 				border-bottom: 15px solid $maastricht-blue;
 				border-top: 15px solid $maastricht-blue;
 			}
